--- a/src/components/bottom-nav/bottom-nav.component.html
+++ b/src/components/bottom-nav/bottom-nav.component.html
@@ -37,7 +37,9 @@
               </div>
               <div class="flex-1 min-w-0">
                 <p class="font-semibold text-white truncate text-sm" [title]="employee.name">{{ employee.name }}</p>
-                <button (click)="clockOut()" class="text-xs text-yellow-400 hover:text-yellow-300 hover:underline">Encerrar Turno</button>
+                <button (click)="handleShiftAction()" class="text-xs hover:underline" [class]="shiftButtonState().className" [disabled]="shiftButtonState().disabled">
+                  {{ shiftButtonState().text }}
+                </button>
               </div>
           </div>
       }
