--- a/src/app.component.html
+++ b/src/app.component.html
@@ -21,3 +21,4 @@
   <router-outlet></router-outlet>
 }
 <app-notification-modal></app-notification-modal>
+<app-toast-container></app-toast-container>
