--- a/src/components/schedules/schedules.component.html
+++ b/src/components/schedules/schedules.component.html
@@ -10,8 +10,8 @@
         <svg class="w-6 h-6 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" /></svg>
       </button>
       <input 
-        type="date"
-        [value]="weekStartDate()"
+        type="week"
+        [value]="weekInputValue()"
         (change)="handleDateChange($event)"
         class="bg-gray-700 border border-gray-600 rounded-lg px-3 py-2 text-white font-semibold focus:outline-none focus:ring-2 focus:ring-blue-500">
       <button (click)="changeWeek(1)" class="p-2 bg-gray-700 rounded-lg hover:bg-gray-600">
