--- a/src/components/bottom-nav/bottom-nav.component.html
+++ b/src/components/bottom-nav/bottom-nav.component.html
@@ -14,22 +14,7 @@
       </div>
     </div>
     
-    <nav class="flex-1 mt-4">
-      <ul>
-        @for (item of secondaryNavItems(); track item.path) {
-          <li>
-            <a (click)="closeAndNavigate(item.path)" class="flex items-center h-12 px-4 space-x-4 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-200 cursor-pointer">
-              <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="item.icon" />
-              </svg>
-              <span class="font-medium">{{ item.name }}</span>
-            </a>
-          </li>
-        }
-      </ul>
-    </nav>
-
-    <div class="p-4 border-t border-gray-700 space-y-4">
+    <div class="p-4 border-t border-gray-700 space-y-4 mt-auto">
       @if(activeEmployee(); as employee) {
           <div class="flex items-center space-x-3">
               <div class="flex-shrink-0">
@@ -58,21 +43,19 @@
 
 <!-- Bottom Navigation Bar -->
 <nav class="fixed bottom-0 left-0 right-0 h-16 bg-gray-800 border-t border-gray-700 z-20">
-  <div class="grid h-full grid-cols-4 max-w-lg mx-auto">
-    @for(item of primaryNavItems(); track item.path) {
-      <a [routerLink]="item.path" routerLinkActive="text-blue-500" [routerLinkActiveOptions]="{ exact: true }"
-         class="inline-flex flex-col items-center justify-center px-5 hover:bg-gray-700 text-gray-400">
+  <div class="flex h-full overflow-x-auto hide-scrollbar">
+    @for(item of availableNavItems(); track item.path) {
+      <a [routerLink]="item.path" routerLinkActive="text-blue-500 bg-gray-700" [routerLinkActiveOptions]="{ exact: true }"
+         class="flex-shrink-0 inline-flex flex-col items-center justify-center px-5 hover:bg-gray-700 text-gray-400 w-24">
         <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="item.icon" />
         </svg>
-        <span class="text-xs">{{ item.name }}</span>
+        <span class="text-xs text-center">{{ item.name }}</span>
       </a>
     }
-    <button (click)="toggleOffCanvas()" class="inline-flex flex-col items-center justify-center px-5 hover:bg-gray-700 text-gray-400">
-      <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-      </svg>
-      <span class="text-xs">Mais</span>
+    <button (click)="toggleOffCanvas()" class="flex-shrink-0 inline-flex flex-col items-center justify-center px-5 hover:bg-gray-700 text-gray-400 w-24">
+      <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path></svg>
+      <span class="text-xs">Conta</span>
     </button>
   </div>
 </nav>
